gcal/trunk/src/objects/googSession__c.object
<CustomObject>
    <description>Holds a google session id for a user and app combo</description>
    <fields>
        <fullName>AuthSubSessionToken__c</fullName>
        <inlineHelpText>The token for your authenticated session.</inlineHelpText>
        <label>AuthSubSessionToken</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <inlineHelpText>The Google Service you are authenticating to. Only Calendars are supported at this time.</inlineHelpText>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>http://spreadsheets.google.com/feeds/</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>http://www.google.com/calendar/feeds/</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>http://docs.google.com/feeds/documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Token_User__c</fullName>
        <inlineHelpText>The ID of the user associated with this token.</inlineHelpText>
        <label>Token User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Google Auth Token</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Auth Token</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>